<resources>
    <string name="app_name">MyShopList</string>
    <string name="action_settings">Preferences</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="shopping_list">Shopping List</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="cost">Cost</string>
    <string name="add_item">What?</string>
    <string name="how_many">How many?</string>
    <string name="enter_price">Price</string>
    <string name="dialog_title">New Item</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_message">Add new item to the list</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_web">Web</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dark_theme">Dark Mode</string>
    <string name="big_font">Block adding</string>

    <string name="layers">Layers</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="toolbar_color">Toolbar color</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="textBox1">Box</string>
    <string name="textName">Name</string>
    <string name="textAmount">Amount</string>
    <string name="textPrice">Price</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>